@@ -184,13 +184,15 @@ static int getopt_long(int argc, char **argv, const char *optstring,
 static void show_usage()
 {
   fprintf(stderr,
-	  "Usage: sash [-hv][-L<path>][-D<path>][--clean-cache][--debug-exec=<flags>][-p<file> or --logport=<file>]\n"
+	  "Usage: sash [-hv][-L<path>][-D<path>][--clean-cache][--disable-cache]"
+	  "[--debug-exec=<flags>][-p<file> or --logport=<file>]\n"
 	  "options:\n"
 	  "  -v          Prints version and exits.\n"
 	  "  -h          Prints this usage and exits.\n"
 	  "  -L<path>    Adds <path> to the head of the load path list.\n"
 	  "  -D<path>    Adds <path> to the head of the dynamic load path list.\n"
 	  "  --clean-cache Cleans compiled cache.\n"
+	  "  --disable-cache Disable compiled cache.\n"
 	  "  --debug-exec=<flags> Sets <flags> for VM debugging.\n"
 	  "    info        Shows loading files.\n"
 	  "    debug       Shows info level + calling function names.\n"
@@ -230,7 +232,8 @@ int main(int argc, char **argv)
     {"help", 0, 0, 'h'},
     {"version", 0, 0, 'v'},
     {"clean-cache", 0, 0, 'C'},
-    {"debug-exec", optional_argument, 0, 'd'},
+    {"disable-cache", 0, 0, 'd'},
+    {"debug-exec", optional_argument, 0, 'E'},
     {"logport", optional_argument, 0, 'p'},
     {0, 0, 0, 0}
    };
@@ -240,9 +243,9 @@ int main(int argc, char **argv)
   Sg_Init();
   vm = Sg_VM();
   SG_VM_SET_FLAG(vm, SG_R6RS_MODE);
-  while ((opt = getopt_long(argc, argv, "L:D:hdvCp:", long_options, &optionIndex)) != -1) {
+  while ((opt = getopt_long(argc, argv, "L:D:hEvCdp:", long_options, &optionIndex)) != -1) {
     switch (opt) {
-    case 'd':
+    case 'E':
       if (strcmp("trace", optarg) == 0) {
 	SG_VM_SET_FLAG(vm, SG_TRACE_LEVEL);
       } else if (strcmp("debug", optarg) == 0) {
@@ -277,6 +280,9 @@ int main(int argc, char **argv)
       break;
     case 'C':
       Sg_CleanCache();
+      break;
+    case 'd':
+      SG_VM_SET_FLAG(vm, SG_DISABLE_CACHE);
       break;
     default:
       fprintf(stderr, "invalid option -- %c\n", opt);
