@@ -271,6 +271,8 @@ struct SgVMRec
   00000000   00000000     00000000 00000000
  */
 typedef enum {
+  /* cache mode */
+  SG_DISABLE_CACHE   = 0x00000001,
   /* reader mode */
   SG_R6RS_MODE       = 0x00000100, /* 00000001 */
   SG_COMPATIBLE_MODE = 0x00000200, /* 00000010 */
